--- a/package.json
+++ b/package.json
@@ -5,14 +5,23 @@
   "scripts": {
     "serve": "vue-cli-service serve --port 3001",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "start": "vue-cli-service serve --open"
   },
+  "files": [
+    "dist/*",
+    "src/*",
+    "public/*",
+    "*.json",
+    "*.js"
+  ],
   "dependencies": {
     "autoprefixer": "^9.8.6",
     "axios": "^0.26.1",
     "bootstrap-icons": "^1.8.1",
     "core-js": "^3.8.3",
     "flowbite": "^1.3.4",
+    "moment": "^2.29.1",
     "postcss": "^8.0.0",
     "postcss-cli": "^8.1.0",
     "tailwind-toast": "^1.1.0",
@@ -31,13 +40,6 @@
     "eslint-plugin-vue": "^8.0.3",
     "vue-template-compiler": "^2.6.14"
   },
-  "files": [
-    "dist/*",
-    "src/*",
-    "public/*",
-    "*.json",
-    "*.js"
-  ],
   "eslintConfig": {
     "root": true,
     "env": {
