--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.0.2",
     "vue": "^2.6.14",
     "vue-email-editor": "^0.9.0",
+    "vue-ityped": "^0.2.1",
     "vue-router": "^3.1.6",
     "vuex": "^3.6.2"
   },
@@ -38,6 +39,7 @@
     "@vue/cli-service": "~5.0.0",
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3",
+    "html-loader": "^3.1.0",
     "vue-template-compiler": "^2.6.14"
   },
   "eslintConfig": {
