--- a/package.json
+++ b/package.json
@@ -20,16 +20,23 @@
     "axios": "^0.26.1",
     "bootstrap-icons": "^1.8.1",
     "core-js": "^3.8.3",
+    "daisyui": "^2.14.1",
     "flowbite": "^1.3.4",
-    "moment": "^2.29.1",
+    "moment": "^2.29.3",
     "postcss": "^8.0.0",
     "postcss-cli": "^8.1.0",
     "tailwind-toast": "^1.1.0",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.0.2",
+    "v-chips-multiselect": "^0.0.10",
     "vue": "^2.6.14",
+    "vue-axios": "^3.4.1",
     "vue-email-editor": "^0.9.0",
     "vue-ityped": "^0.2.1",
+    "vue-material-chips": "^0.0.4",
+    "vue-moment": "^4.1.0",
     "vue-router": "^3.1.6",
+    "vue-scripts": "^0.0.0",
+    "vue-social-auth": "^1.4.9",
     "vuex": "^3.6.2"
   },
   "devDependencies": {
